--- a/settings.gradle
+++ b/settings.gradle
@@ -41,6 +41,7 @@ include 'gcp-bundle'
 include 'dell'
 include 'snowflake'
 include 'delta-lake'
+include 'delta'
 include 'kafka-connect'
 include 'open-api'
 
@@ -67,6 +68,7 @@ project(':gcp-bundle').name = 'iceberg-gcp-bundle'
 project(':dell').name = 'iceberg-dell'
 project(':snowflake').name = 'iceberg-snowflake'
 project(':delta-lake').name = 'iceberg-delta-lake'
+project(':delta').name = 'iceberg-delta'
 project(':kafka-connect').name = 'iceberg-kafka-connect'
 project(':open-api').name = 'iceberg-open-api'
 
