--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,7 @@ calcite = "1.10.0"
 datasketches = "6.0.0"
 delta-standalone = "3.2.0"
 delta-spark = "3.2.0"
+delta-kernel = "4.0.0rc1"
 esotericsoftware-kryo = "4.0.3"
 errorprone-annotations = "2.31.0"
 findbugs-jsr305 = "3.0.2"
@@ -107,6 +108,8 @@ calcite-core = { module = "org.apache.calcite:calcite-core", version.ref = "calc
 calcite-druid = { module = "org.apache.calcite:calcite-druid", version.ref = "calcite" }
 datasketches = { module = "org.apache.datasketches:datasketches-java", version.ref = "datasketches" }
 delta-standalone = { module = "io.delta:delta-standalone_2.12", version.ref = "delta-standalone" }
+delta-kernel = { module = "io.delta:delta-kernel-api", version.ref = "delta-kernel" }
+delta-kernel-defaults = { module = "io.delta:delta-kernel-defaults", version.ref = "delta-kernel" }
 errorprone-annotations = { module = "com.google.errorprone:error_prone_annotations", version.ref = "errorprone-annotations" }
 findbugs-jsr305 = { module = "com.google.code.findbugs:jsr305", version.ref = "findbugs-jsr305" }
 flink118-avro = { module = "org.apache.flink:flink-avro", version.ref = "flink118" }
